# SkinVision

./: .gitignore  README.md  The_plan.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: app.py
config/: requirements-dev.txt
hf_spaces/: DEPLOY.md  README.md  requirements.txt
notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb  03_evaluation.ipynb  04_gradcam.ipynb
src/: config.py  dataset.py  evaluate.py  gradcam.py  model.py  preprocessing.py  train.py
tests/: test_config.py  test_dataset.py  test_gradcam.py  test_model.py  test_preprocessing.py
