[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "skinvision"
version = "0.1.0"
description = "Skin lesion classifier with Grad-CAM explainability (EfficientNet-B0, HAM10000)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "albumentations>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0,<2",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "gradio>=4.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "flake8>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/kitsakisGk/SkinVision"
Repository = "https://github.com/kitsakisGk/SkinVision"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.flake8]
max-line-length = 100
ignore = ["E203", "W503"]
exclude = ["__pycache__", ".git", ".venv", "venv"]
